# tarchBoard

./: .env  Cargo.toml
migrations/2021-12-09-194218_create_kanban/: down.sql  up.sql
src/: app.rs  load_image.rs  main.rs  message.rs  schema.rs  view.rs  weather.rs
src/clock/: mod.rs  stopwatch.rs  timer.rs  timezone_dropdown.rs  widget.rs
src/kanban/: mod.rs  models.rs  widget.rs
src/utility_widgets/: text_input.rs
src/weather/: mod.rs  query.rs  widget.rs
