[package]
name = "tarch_board"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }

eframe = { git = "https://github.com/emilk/egui", default-features = false, features = ["default_fonts", "egui_glow"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = "0.11"
anyhow = "1.0.47"

chrono = "0.4.0"
chrono-tz = "0.6.0"

image = "0.23.14"
